{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 27,
  "lineage": "117a2121-183c-c1e3-443c-8f36a2948456",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991370224656:network-acl/acl-0cee367233ca16c75",
            "default_network_acl_id": "acl-0cee367233ca16c75",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0cee367233ca16c75",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "991370224656",
            "subnet_ids": [
              "subnet-00e352443139dfd87",
              "subnet-048f076584ed4df84",
              "subnet-04fa9eb37180fe2d8",
              "subnet-057780ad34ae08c45"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "facebook-vpc-default",
              "Project": "facebook-clone"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "facebook-vpc-default",
              "Project": "facebook-clone"
            },
            "vpc_id": "vpc-049a442a1924a0551"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991370224656:route-table/rtb-0c95a705ebcab4895",
            "default_route_table_id": "rtb-0c95a705ebcab4895",
            "id": "rtb-0c95a705ebcab4895",
            "owner_id": "991370224656",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "facebook-vpc-default",
              "Project": "facebook-clone"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "facebook-vpc-default",
              "Project": "facebook-clone"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-049a442a1924a0551"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991370224656:security-group/sg-085bc0970e88aabe2",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-085bc0970e88aabe2",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "991370224656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "facebook-vpc-default",
              "Project": "facebook-clone"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "facebook-vpc-default",
              "Project": "facebook-clone"
            },
            "vpc_id": "vpc-049a442a1924a0551"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-082094d006ce718f3",
            "arn": "arn:aws:ec2:us-east-1:991370224656:elastic-ip/eipalloc-082094d006ce718f3",
            "domain": "vpc",
            "id": "eipalloc-082094d006ce718f3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-213-167-203.compute-1.amazonaws.com",
            "public_ip": "3.213.167.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "facebook-vpc-us-east-1a",
              "Project": "facebook-clone"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "facebook-vpc-us-east-1a",
              "Project": "facebook-clone"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991370224656:internet-gateway/igw-0b3c700dc10591866",
            "id": "igw-0b3c700dc10591866",
            "owner_id": "991370224656",
            "tags": {
              "Environment": "dev",
              "Name": "facebook-vpc",
              "Project": "facebook-clone"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "facebook-vpc",
              "Project": "facebook-clone"
            },
            "vpc_id": "vpc-049a442a1924a0551"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-082094d006ce718f3",
            "association_id": "eipassoc-0c32d1145dd250be7",
            "connectivity_type": "public",
            "id": "nat-077808567899dda51",
            "network_interface_id": "eni-01798281cf2c2aeba",
            "private_ip": "10.0.101.161",
            "public_ip": "3.213.167.203",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-048f076584ed4df84",
            "tags": {
              "Environment": "dev",
              "Name": "facebook-vpc-us-east-1a",
              "Project": "facebook-clone"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "facebook-vpc-us-east-1a",
              "Project": "facebook-clone"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0021bf95e180f24241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-077808567899dda51",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0021bf95e180f2424",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b3c700dc10591866",
            "id": "r-rtb-06c9faa235ce13efe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06c9faa235ce13efe",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991370224656:route-table/rtb-0021bf95e180f2424",
            "id": "rtb-0021bf95e180f2424",
            "owner_id": "991370224656",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "facebook-vpc-private",
              "Project": "facebook-clone"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "facebook-vpc-private",
              "Project": "facebook-clone"
            },
            "timeouts": null,
            "vpc_id": "vpc-049a442a1924a0551"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991370224656:route-table/rtb-06c9faa235ce13efe",
            "id": "rtb-06c9faa235ce13efe",
            "owner_id": "991370224656",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "facebook-vpc-public",
              "Project": "facebook-clone"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "facebook-vpc-public",
              "Project": "facebook-clone"
            },
            "timeouts": null,
            "vpc_id": "vpc-049a442a1924a0551"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098316932ff86cbf7",
            "route_table_id": "rtb-0021bf95e180f2424",
            "subnet_id": "subnet-057780ad34ae08c45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6e5ea440399abf0",
            "route_table_id": "rtb-0021bf95e180f2424",
            "subnet_id": "subnet-04fa9eb37180fe2d8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afe468c3e593aef7",
            "route_table_id": "rtb-06c9faa235ce13efe",
            "subnet_id": "subnet-048f076584ed4df84"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae77433bf1e03e6e",
            "route_table_id": "rtb-06c9faa235ce13efe",
            "subnet_id": "subnet-00e352443139dfd87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991370224656:subnet/subnet-057780ad34ae08c45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057780ad34ae08c45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "991370224656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "facebook-vpc-private-us-east-1a",
              "Project": "facebook-clone",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "facebook-vpc-private-us-east-1a",
              "Project": "facebook-clone",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-049a442a1924a0551"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991370224656:subnet/subnet-04fa9eb37180fe2d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fa9eb37180fe2d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "991370224656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "facebook-vpc-private-us-east-1b",
              "Project": "facebook-clone",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "facebook-vpc-private-us-east-1b",
              "Project": "facebook-clone",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-049a442a1924a0551"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991370224656:subnet/subnet-048f076584ed4df84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048f076584ed4df84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "991370224656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "facebook-vpc-public-us-east-1a",
              "Project": "facebook-clone",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "facebook-vpc-public-us-east-1a",
              "Project": "facebook-clone",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-049a442a1924a0551"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991370224656:subnet/subnet-00e352443139dfd87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e352443139dfd87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "991370224656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "facebook-vpc-public-us-east-1b",
              "Project": "facebook-clone",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "facebook-vpc-public-us-east-1b",
              "Project": "facebook-clone",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-049a442a1924a0551"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991370224656:vpc/vpc-049a442a1924a0551",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cee367233ca16c75",
            "default_route_table_id": "rtb-0c95a705ebcab4895",
            "default_security_group_id": "sg-085bc0970e88aabe2",
            "dhcp_options_id": "dopt-04af6a356329be6d8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049a442a1924a0551",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c95a705ebcab4895",
            "owner_id": "991370224656",
            "tags": {
              "Environment": "dev",
              "Name": "facebook-vpc",
              "Project": "facebook-clone"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "facebook-vpc",
              "Project": "facebook-clone"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}